Fix little overflow issues

--- a/FancyTwitchServer/content/scss/markdown.scss
+++ b/FancyTwitchServer/content/scss/markdown.scss
@@ -68,7 +68,7 @@
     header {
         margin-left: 2px;
         margin-top: 40px;
-
+        overflow: visible;
         ul {
             margin-top: 0;
             padding-top: 0;
